force-app/main/default/objects/Ticket_assignment__c/Ticket_assignment__c.object-meta.xml
<CustomObject>
    <label>Ticket assignment</label>
    <nameField>
        <displayFormat>Assign-{0000}</displayFormat>
        <label>Ticket assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ticket assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>