force-app/main/default/objects/Ticket_assignment__c/fields/Assignment_date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_date__c</fullName>
    <label>Assignment date</label>
    <type>Date</type>
</CustomField>