force-app/main/default/objects/Ticket_assignment__c/fields/Hours_worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_worked__c</fullName>
    <label>Hours worked</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>