force-app/main/default/objects/Ticket_assignment__c/fields/Support_ticket__c.field-meta.xml
<CustomField>
    <fullName>Support_ticket__c</fullName>
    <label>Support ticket</label>
    <referenceTo>Support__c</referenceTo>
    <relationshipLabel>Ticket assignments</relationshipLabel>
    <relationshipName>Ticket_assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>