force-app/main/default/objects/Ticket_assignment__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <label>Technician</label>
    <referenceTo>Technician__c</referenceTo>
    <relationshipLabel>Ticket assignments</relationshipLabel>
    <relationshipName>Ticket_assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>